--- a/main.html
+++ b/main.html
@@ -27,6 +27,7 @@
     <div class="title"></div>
     <div class="rank"></div>
   </footer>
+  <script type="text/javascript" src="/moment-with-timezone.js"></script>
   <script type="text/javascript" src="/app.js"></script>
 </body>
 
