rectify && avoid 304 cache when new ranking comes at 11:30 JST

--- a/main.html
+++ b/main.html
@@ -10,24 +10,8 @@
 </head>
 
 <body>
-<div id="top-right" class="right"><div id="top-menu">
-    <ul class="nav navbar-nav navbar-right">
-        <li>
-            <a class="chrome-link" data-name="history" data-url="chrome://history" href="#"></a>
-        </li>
-        <li>
-            <a class="chrome-link" data-name="bookmarks" data-url="chrome://bookmarks" href="#"></a>
-        </li>
-        <li>
-            <a class="chrome-link" data-name="apps" data-url="chrome://apps" href="#"></a>
-        </li>
-    </ul>
-</div></div>
-  <footer class="footer">
-    <div class="title"></div>
-    <div class="rank"></div>
-  </footer>
-  <script type="text/javascript" src="/moment-with-timezone.js"></script>
+  <div id="app"></div>
+  <script type="text/javascript" src="/vendor.js"></script>
   <script type="text/javascript" src="/app.js"></script>
 </body>
 
