--- a/source/html/main.html
+++ b/source/html/main.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="text/javascript" src="/app.js"></script>
+  <div id="root"></div>
+  <script type="text/javascript" src="/main.js"></script>
 </body>
 
 </html>
