--- a/source/html/options.html
+++ b/source/html/options.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
   <script type="text/javascript" src="/options.js"></script>
 </body>
 
